--- a/src/styles/grocery-aisles.css
+++ b/src/styles/grocery-aisles.css
@@ -58,7 +58,7 @@
 
 @media (max-width: 1560px) {
   .grocery-aisles-products {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     row-gap: 30px;
   }
   .grocery-text {
@@ -77,9 +77,19 @@
 
 @media (max-width: 980px) {
   .grocery-aisles-products {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 20px;
   }
   .grocery-aisles {
     margin: 30px;
+  }
+}
+
+@media (max-width: 720px) {
+  .grocery-aisles-products {
+    grid-template-columns: 1fr;
+  }
+  .grocery-img {
+    height: 200px;
   }
 }
