--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -36,8 +36,9 @@
 
 @media (max-width: 750px) {
   .header {
-    padding: 20px 0;
+    padding: 0;
+    margin-top: 20px;
     margin-left: 30px;
-    width: 100vw;
+    width: calc(100vw-30px);
   }
 }
